# Assera

./: .dockerignore  .style.yapf  404.html  CMakeLists.txt  README.md  build.bat  build.sh  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
CMake/: CopySharedLibraries.cmake  DocSetup.cmake  InstallUtilities.cmake  LLVMSetup.cmake  OpenBLASSetup.cmake
Case Studies/: index.html
Case Studies/CONTRIBUTING/: index.html
Install/: index.html
Install/Building_on_MacOS/: index.html
Install/Building_on_Ubuntu/: index.html
Install/Building_on_Windows/: index.html
Install/Installing_Assera_on_MacOS/: index.html
Install/Installing_Assera_on_Ubuntu/: index.html
Install/Installing_Assera_on_Windows/: index.html
Manual/: index.html
Manual/00 Introduction/: index.html
Manual/01 Arrays and Scalars/: index.html
Manual/02 Simple Affine Loop Nests/: index.html
Manual/03 Schedules/: index.html
Manual/04 Fusing/: index.html
Manual/05 Targets/: index.html
Manual/06 Plans - Caching/: index.html
Manual/07 Plans - Operations and Optimizations/: index.html
Manual/08 Deferred Layout of Constant Arrays/: index.html
Manual/09 Parameters/: index.html
Manual/10 Packages/: index.html
Manual/11 Plans - GPU Tensorization/: index.html
Reference/assera/: index.html
Reference/enumerations/CacheStrategy/: index.html
Reference/enumerations/MMAFragmentOp/: index.html
Reference/enumerations/MMASchedulingPolicy/: index.html
Reference/enumerations/MMAShape/: index.html
Reference/enumerations/Role/: index.html
Reference/enumerations/ScalarType/: index.html
Reference/functions/cast/: index.html
Reference/functions/create_dimensions/: index.html
Reference/safety_analysis/: index.html
Tutorials/: index.html
Tutorials/Hello_MatMul/: index.html
Tutorials/Optimized_MatMul/: index.html
Tutorials/Pi3_Cross_Compilation/: index.html
Tutorials/hello_matmul/: hello_matmul_generator.py
Tutorials/hello_matmul_gpu/: matmul_utils.py  tensor_matmul_gpu_generator.py  tensor_multi_pass_matmul_gpu_generator.py  tensor_sched_policy_matmul_gpu_generator.py
Tutorials/optimized_matmul/: optimized_matmul_generator.py
assera/: CMakeLists.txt
assera/acc-gpu-runner/: CMakeLists.txt  README.md  acc-gpu-runner.py
assera/acc-lsp-server/: CMakeLists.txt
assera/acc-opt/: CMakeLists.txt
assera/acc-translate/: CMakeLists.txt
assera/accc/: CMakeLists.txt  CMakeLists.txt.emitted_library.in  CMakeLists.txt.generator.in  CMakeLists.txt.main.in  README.md  accc.py
assera/export/: AsseraConfig.cmake.in  CMakeLists.txt
assera/ir/: CMakeLists.txt
assera/ir/include/: AffineConstraintsHelper.h  CMakeLists.txt  Common.td  DialectRegistry.h  IRUtil.h  InitializeAssera.h  LLVMEmitterTargets.h.in  Metadata.h  TranslateToHeader.h
assera/ir/include/argo/: ArgoBase.td  ArgoOps.h  ArgoOps.td  ArgoStructuredOps.td  ArgoStructuredOpsInterface.td  ArgoTraits.h  ArgoTypes.h  CMakeLists.txt  FoldedIntrinsics.h  Utils.h
assera/ir/include/assera/: AsseraOps.h  AsseraOps.td  CMakeLists.txt
assera/ir/include/exec/: CMakeLists.txt  CacheAccessMaps.h  ExecutionOptions.h  ExecutionPlanAttributes.h  ExecutionPlanAttrs.td  ExecutionPlanEnums.h  ExecutionPlanOps.h  ExecutionPlanOps.td  InPlaceUnrollInfo.h  ParallelizationInfo.h  TensorizationInfo.h  VectorizationInfo.h
assera/ir/include/intrinsics/: AsseraIntrinsics.td  AsseraIntrinsicsDialect.h  CMakeLists.txt
assera/ir/include/nest/: AffineConstraints.h  AffineExpression.h  CMakeLists.txt  Index.h  IndexRange.h  IterationDomain.h  LoopIndexInfo.h  LoopNestAffineConstraints.h  LoopNestAttributes.h  LoopNestAttrs.td  LoopNestBase.td  LoopNestBuilder.h  LoopNestExportedInterfaces.td  LoopNestInterfaces.h  LoopNestInterfaces.td  LoopNestOps.h  LoopNestOps.td  LoopNestTypes.h  LoopVisitSchedule.h  OperandIndex.h  Range.h  TransformedDomain.h  Util.h
assera/ir/include/value/: CMakeLists.txt  ValueAttributes.h  ValueAttrs.td  ValueBase.td  ValueDialect.h  ValueEnums.h  ValueFuncOp.h  ValueMMAOp.h  ValueOps.td  ValueRangeOp.h
assera/mlirHelpers/: CMakeLists.txt
assera/onnx-emitter/: onnx_emitter.py
assera/python/: CMakeLists.txt  README.md
assera/runtime/: CMakeLists.txt
assera/testing/: CMakeLists.txt
assera/toml/: README.md  parse_toml_header.py
assera/transforms/: CMakeLists.txt
assera/utilities/: CMakeLists.txt
assera/value/: CMakeLists.txt
assera/vulkanRuntime/: CMakeLists.txt
docs/: .bumpversion.cfg  build.bat
docs/Case Studies/: CONTRIBUTING.md  README.md
docs/Install/: Building_on_MacOS.md  Building_on_Ubuntu.md  Building_on_Windows.md  Installing_Assera_on_MacOS.md  Installing_Assera_on_Ubuntu.md  Installing_Assera_on_Windows.md  README.md
docs/Manual/: 00 Introduction.md  01 Arrays and Scalars.md  02 Simple Affine Loop Nests.md  03 Schedules.md  04 Fusing.md  05 Targets.md  06 Plans - Caching.md  07 Plans - Operations and Optimizations.md  08 Deferred Layout of Constant Arrays.md  09 Parameters.md  10 Packages.md  11 Plans - GPU Tensorization.md  README.md
docs/Reference/: assera.md  safety_analysis.md
docs/Tutorials/: Hello_MatMul.md  Optimized_MatMul.md  Pi3_Cross_Compilation.md  README.md
docs/demos/: quickstart.ipynb
kernels/gather/: naive_runtime_sized.py
kernels/range/: naive_runtime_sized.py
kernels/reduce_mean/: naive_runtime_sized.py
search/: search_index.json
tools/benchmarkers/: assera_gemm.py  gpu_benchmark_tool.py  requirements.txt
tools/viz/: .gitignore  run.bat  run.sh
(+443 files in other folders)
