[metadata]
name = assera
author = KhulnaSoft Research AI Compilers Team
author_email = info@khulnasoft.com
summary = Assera - An optimizing cross-compiler for compute-intensive code
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
platforms = Linux, Darwin, Windows
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = ~=3.7
zip_safe = False
setup_requires =
    setuptools>=31
    setuptools_scm
install_requires =
    termcolor
    py-cpuinfo
    varname
    hatlib==0.0.39
    numpy
    pyyaml
    tomlkit>=0.11.1, <0.11.5
    assera-compilers
    assera-gpu
    assera-llvm==15.0.101 # keep in sync with assera/python/llvm/setup.cfg
package_dir =
    assera = assera/python/assera
    assera.hat = assera/hat/scripts
    assera.lang = assera/python/assera/lang
    assera.samples = assera/python/samples
    assera.test = assera/python/assera/test
